# 8080Emulator

./: CMakeLists.txt
include/: CPU.h  CpuFunctions.h  Emulator.h  State8080.h
src/: CPU.cpp  CpuFunctions.cpp  Emulator.cpp  State8080.cpp  main.cpp
